<resources>
    <string name="app_name">Quotes App</string>
    <string name="quotify">QUOTIFY</string>
    <string name="genius_is_one_percent_inspiration_and_ninety_nine_percent_perspiration">Genius is one percent inspiration and ninety-nine percent perspiration.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="bruce_wayne">Bruce Wayne</string>

</resources>