<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="32dp"
    android:paddingBottom="0dp"
    android:paddingTop="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        android:text="@string/quotify"
        android:textColor="#FFF"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_quote"
            app:tint="#454545" />

        <TextView
            android:id="@+id/quoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/genius_is_one_percent_inspiration_and_ninety_nine_percent_perspiration"
            android:textColor="#454545"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/quoteAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/bruce_wayne"
            android:textColor="#454545"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_left_arrow"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"
            android:onClick="onPrevious"
            android:text="@string/previous"
            app:drawableTint="#80FFFFFF"
            android:layout_weight="1"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableTint="#80FFFFFF"
            app:drawableEndCompat="@drawable/ic_right_arrow"
            android:text="@string/next"
            android:textSize="18sp"
            android:textColor="#80FFFFFF"
            android:onClick="onNext"
            android:textAlignment="textEnd"
            >
        </TextView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onShare"
        android:backgroundTint="#1D2671"
        app:srcCompat="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>